Update anniversary page external links
- Add new tab/window attributes

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -97,8 +97,8 @@ css: [/css/static-main-content.css]
     <aside>
       <h3>From the Archives</h3>
       <ul>
-        <li><a href="https://web.archive.org/web/20131115035751/http://aquent.com/blog/free-online-course-mooc-html-css-for-designers">Aquent Gymnasium Offers MOOCs for Digital Creatives</a></li>
-        <li><a href="https://web.archive.org/web/20131115042229/http://aquent.com/blog/free-courses-practical-skills-aquent-gymnasium">Laser Focus and Useful Information: Jeremy Osborn on Aquent Gymnasium</a></li>
+        <li><a href="https://web.archive.org/web/20131115035751/http://aquent.com/blog/free-online-course-mooc-html-css-for-designers" target="_blank" rel="noopener">Aquent Gymnasium Offers MOOCs for Digital Creatives</a></li>
+        <li><a href="https://web.archive.org/web/20131115042229/http://aquent.com/blog/free-courses-practical-skills-aquent-gymnasium" target="_blank" rel="noopener">Laser Focus and Useful Information: Jeremy Osborn on Aquent Gymnasium</a></li>
       </ul>
     </aside>
   </article>
@@ -339,7 +339,7 @@ css: [/css/static-main-content.css]
     <h2>Back to Design Basics</h2>
     <p>We’ve been trailblazers in the web community since launching in 2013 — shoutout to iPhone 5s and Vine.</p>
     <p>To celebrate, we just dropped these 5-minute tutorials on design basics taught by Meagan Fisher.</p>
-    <p>Celebrate with us and <a href="https://www.youtube.com/watch?v=MPxEtMX-rqI&list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2">design like a pro</a>!
+    <p>Celebrate with us and <a href="https://www.youtube.com/watch?v=MPxEtMX-rqI&list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">design like a pro</a>!
     <div class="images">
       <figure>
         <div class="iframe-video-holder">
