Update anniversary page content
- Add text wrap preference

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -106,7 +106,7 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2014</b></p>
     <h2>Gym Shorts Drop</h2>
-    <p>Gymnasium releases the short course format Gym Shorts, learning within an hour or less, with <cite><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></cite>.</p>
+    <p>Gymnasium releases the short course format Gym Shorts, learning within an hour or less, with <cite class="no-wrap"><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></cite>.</p>
     <figure>
       <div class="iframe-video-holder">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/I1KGMtQBFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -273,7 +273,7 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2019</b></p>
     <h2>Take 5 Tutorials</h2>
-    <p>Gymnasium releases <a href="http://thegymnasium.com/courses/take5/">Take 5</a> tutorials, a five-minute video-based course format for learning from industry experts.</p>
+    <p>Gymnasium releases <a href="http://thegymnasium.com/courses/take5/">Take 5</a> tutorials, a five-minute video-based course format for learning from <span class="no-wrap">industry experts</span>.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}homepages/gym-take5-blitz-2019-10-28-1920w.jpg" width="1920" height="1080" decoding="async">
