Update anniversary page
- Add missing images container
- Add missing end tag
- Update URL (http to https)
- Remove width declaration
- Update breakpoint
- Update formatting

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -107,20 +107,22 @@ css: [/css/static-main-content.css]
     <p class="date"><b>2014</b></p>
     <h2>Gym Shorts Drop</h2>
     <p>Gymnasium releases the short course format Gym Shorts, learning within an hour or less, with <cite class="no-wrap"><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></cite>.</p>
-    <figure>
-      <div class="iframe-video-holder">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/I1KGMtQBFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </div>
-      <figcaption>
-      <small>Aquent Gymnasium: Behind the Scenes (2014)</small>
-      </figcaption>
-    </figure>
-    <figure>
-      <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2015-08-11-1920w.jpg" width="1920" height="1080" decoding="async">
-      <figcaption>
-        <small>Gymnasium <a href="https://archive.li/FwO73" target="_blank" rel="noopener">homepage</a> in 2014 (and 2015).</small>
-      </figcaption>
-    </figure>
+    <div class="images">
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/I1KGMtQBFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small>Aquent Gymnasium: Behind the Scenes (2014)</small>
+        </figcaption>
+      </figure>
+      <figure>
+        <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2015-08-11-1920w.jpg" width="1920" height="1080" decoding="async">
+        <figcaption>
+          <small>Gymnasium <a href="https://archive.li/FwO73" target="_blank" rel="noopener">homepage</a> in 2014 (and 2015).</small>
+        </figcaption>
+      </figure>
+    </div>
     <aside>
       <h3>From the Archives</h3>
       <ul>
@@ -273,7 +275,7 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2019</b></p>
     <h2>Take 5 Tutorials</h2>
-    <p>Gymnasium releases <a href="http://thegymnasium.com/courses/take5/">Take 5</a> tutorials, a five-minute video-based course format for learning from <span class="no-wrap">industry experts</span>.</p>
+    <p>Gymnasium releases <a href="https://thegymnasium.com/courses/take5/">Take 5</a> tutorials, a five-minute video-based course format for learning from <span class="no-wrap">industry experts</span>.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}homepages/gym-take5-blitz-2019-10-28-1920w.jpg" width="1920" height="1080" decoding="async">
@@ -330,8 +332,6 @@ css: [/css/static-main-content.css]
     <p class="date"><b>2023</b></p>
     <h2>10 Years of Free Online Learning</h2>
     <p>Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, articles, and webinars on design, development, UX, accessibility, and career skills from industry experts to anyone, anywhere in the world.</p>
-    <div class="images">
-    </div>
   </article>
 
   <article>
@@ -339,7 +339,7 @@ css: [/css/static-main-content.css]
     <h2>Back to Design Basics</h2>
     <p>We’ve been trailblazers in the web community since launching in 2013 — shoutout to iPhone 5s and Vine.</p>
     <p>To celebrate, we just dropped these 5-minute tutorials on design basics taught by Meagan Fisher.</p>
-    <p>Celebrate with us and <a href="https://www.youtube.com/watch?v=MPxEtMX-rqI&list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">design like a pro</a>!
+    <p>Celebrate with us and <a href="https://www.youtube.com/watch?v=MPxEtMX-rqI&list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">design like a pro</a>!</p>
     <div class="images">
       <figure>
         <div class="iframe-video-holder">
