Update anniversary page
- Update register URL path

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -36,7 +36,7 @@ css: [/css/static-main-content.css]
           <li>Over 1,000 new students join every month</li>
         </ul>
         <figcaption>
-          <small><b>Not a student?</b> <a href="{{ site.url }}/register">Join Gymnasium</a> <em>for free</em>.</small>
+          <small><b>Not a student?</b> <a href="{{ site.gymurl }}/register">Join Gymnasium</a> <em>for free</em>.</small>
         </figcaption>
       </figure>
     </div>
