Add per-page banner support
- also update README with Docker Compose V2 Migration notes

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -2,6 +2,7 @@
 layout: wrapper-full-white
 permalink: /anniversary/
 css: [/css/static-main-content.css]
+banner: false
 ---
 
 {%- assign img_path = "/img/static-pages/anniversary/" | prepend: site.url -%}
