Update courses page
- Update featured tutorial to GYM-5054
- Add image element width and height
- Add background and border to images

--- a/courses/index.html
+++ b/courses/index.html
@@ -47,7 +47,7 @@ permalink: /courses/
                     <div class="col-md-5">
                       <figure>
                         <a href="{{ site.gymurl }}{{ courses[main.full_courses.promo_ID].url }}">
-                          <img alt="{{ courses[main.full_courses.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.full_courses.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
+                          <img alt="{{ courses[main.full_courses.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.full_courses.promo_ID].poster_art }}" width="574" height="488" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
@@ -111,7 +111,7 @@ permalink: /courses/
                     <div class="col-md-5">
                       <figure>
                         <a href="{{ site.gymurl }}{{ courses[main.gym_shorts.promo_ID].url }}">
-                          <img alt="{{ courses[main.gym_shorts.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.gym_shorts.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
+                          <img alt="{{ courses[main.gym_shorts.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.gym_shorts.promo_ID].poster_art }}" width="574" height="488" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
@@ -175,7 +175,7 @@ permalink: /courses/
                     <div class="col-md-5">
                       <figure>
                         <a href="{{ take5[main.take5_tutorials.promo_ID].title | slugify | prepend: base_path }}">
-                          <img alt="{{ take5[main.take5_tutorials.promo_ID].title }} cover image." src="{{ site.url }}{{ take5[main.take5_tutorials.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
+                          <img alt="{{ take5[main.take5_tutorials.promo_ID].title }} cover image." src="{{ site.url }}{{ take5[main.take5_tutorials.promo_ID].poster_art }}" width="1280" height="720" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
@@ -239,7 +239,7 @@ permalink: /courses/
                     <div class="col-md-5">
                       <figure>
                         <a href="{{ site.gymurl }}/{{ main.collections.promo_ID }}">
-                          <img alt="{{ main.collections.promo_ID | capitalize | replace: '-', ' ' }} cover image." src="{{ site.url | append: '/img/hub-pages/og/' }}{{ main.collections.promo_ID | append: '-collection-og.png' }}" decoding="async" fetchpriority="high"></a>
+                          <img alt="{{ main.collections.promo_ID | capitalize | replace: '-', ' ' }} cover image." src="{{ site.url | append: '/img/hub-pages/og/' }}{{ main.collections.promo_ID | append: '-collection-og.png' }}" width="1200" height="628" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
