Update anniversary page
- Update headings language

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -242,7 +242,7 @@ banner: false
 
   <article>
     <p class="date"><b>2016</b></p>
-    <h2>Open Classroom</h2>
+    <h2>OpenClassrooms Collab</h2>
     <p>Gymnasium launches a collaboration with <a href="https://openclassrooms.com" target="_blank" rel="noopener">OpenClassrooms</a>, a learning platform based in France, with a course on how to build wireframes and prototypes with Sketch.</p>
     <div class="images">
       <figure>
@@ -256,7 +256,7 @@ banner: false
 
   <article>
     <p class="date"><b>2017</b></p>
-    <h2>Gymnasium Moderates An Event Apart Panel</h2>
+    <h2>An Event Apart Panel</h2>
     <p>In Seattle, Director of Learning Jeremy Osborn hosts the first of many panels at the <cite><a href="https://aneventapart.com/news/post/resources-from-seattle-2017" target="_blank" rel="noopener">An Event Apart</a></cite> web conference in 2017.</p>
     <div class="images">
       <figure>
