Update anniversary page
- Update page layout
- Add images and captions
- Add extra 2019 section

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -18,7 +18,7 @@ banner: false
     <h1>10 Years of Aquent Gymnasium</h1>
 
     <p class="hero-text">It’s officially been a decade since we launched our free online learning platform in 2013. <span class="no-wrap">To celebrate</span> 10 years, we’re taking a look back at some of the milestones that helped make Gymnasium what it is today. Join us for a scroll down memory lane.</p>
-    <div class="images">
+    <div class="images col-3">
       <figure>
         <div class="iframe-video-holder">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/Uvkbo9iHHdw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -60,7 +60,7 @@ banner: false
           <iframe width="560" height="315" src="https://www.youtube.com/embed/_NSJd_0BkF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
-        <small>Aquent’s Summer of Learning webcast <cite>Transform HTML Into HTML5</cite> on <a href="https://www.youtube.com/@TheSummerOfLearning" target="_blank" rel="noopener">YouTube</a>.</small>
+        <small>Aquent’s Summer of Learning webcast <cite>Transform HTML Into HTML5</cite> and <a href="https://www.youtube.com/@TheSummerOfLearning/videos" target="_blank" rel="noopener">YouTube</a> channel.</small>
         </figcaption>
       </figure>
     </div>
@@ -68,8 +68,7 @@ banner: false
       <h3>From the Archives</h3>
       <ul>
         <li><a href="https://www.youtube.com/@TheSummerOfLearning" target="_blank" rel="noopener">Summer of Learning YouTube Channel</a>
-        <li><a href="https://www.learningguild.com/articles/1199/real-life-moocs-filling-private-sector-skills-gaps/" target="_blank" rel="noopener">
-    Real Life: MOOCs Filling Private-sector Skills Gaps</a></li>
+        <li><a href="https://www.learningguild.com/articles/1199/real-life-moocs-filling-private-sector-skills-gaps/" target="_blank" rel="noopener">Real Life: MOOCs Filling Private-sector Skills Gaps</a></li>
       </ul>
     </aside>
   </article>
@@ -96,14 +95,6 @@ banner: false
         </figcaption>
       </figure>
       <figure>
-        <div class="iframe-video-holder aspect-legacy-2">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/4PiVJvIzX_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <figcaption>
-        <small><cite>Responsive Web Design</cite> course promo</small>
-        </figcaption>
-      </figure>
-      <figure>
         <img alt="Gymnasium homepage circa 2013 with original yellow color theme." src="{{ img_path }}homepages/gym-homepape-hero-2013-06-06-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
         <small>Gymnasium <a href="https://web.archive.org/web/20130606210459/http://www.thegymnasium.com/" target="_blank" rel="noopener">homepage</a> (soft launch) with original torch logo and yellow color theme in June 2013.</small>
@@ -118,7 +109,15 @@ banner: false
       <figure>
         <img alt="Gymnasium catalog with its first two courses in 2013." src="{{ img_path }}homepages/gym-catalog-2013-11-07-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
-        <small>The <a href="https://web.archive.org/web/20131123134750/http://thegymnasium.com/catalog" target="_blank" rel="noopener">catalog</a> featuring <cite>Coding for Designers</cite> (July) and <cite>Responsive Web Design</cite> (October) in 2013.</small>
+        <small>The Gymnasium <a href="https://web.archive.org/web/20131123134750/http://thegymnasium.com/catalog" target="_blank" rel="noopener">catalog</a> featuring <cite>Coding for Designers</cite> (July) and <cite>Responsive Web Design</cite> (October) in 2013.</small>
+        </figcaption>
+      </figure>
+      <figure>
+        <div class="iframe-video-holder aspect-legacy-2">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4PiVJvIzX_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small><cite>Responsive Web Design</cite> course promo in December 2013</small>
         </figcaption>
       </figure>
     </div>
@@ -228,13 +227,13 @@ banner: false
       <figure>
         <img alt="" src="{{ img_path }}promos/fr-sit-and-get-fit-postcard-2016-1280w.jpg" width="1280" height="1280" decoding="async">
         <figcaption>
-          <small>Our Sit and Get Fit campaign postcard <span class="no-wrap">(édition française)</span>. Photo courtesy of Andrew Miller.</small>
+          <small>Our Sit and Get Fit campaign postcard <span class="no-wrap">(édition française)</span>. Photo courtesy of Andrew Miller</small>
         </figcaption>
       </figure>
       <figure>
         <img alt="" src="{{ img_path }}peeps/fr-obsorn-miller-bifulco-1280w.jpg" width="1280" height="1280" decoding="async">
         <figcaption>
-          <small>Paris portrait of Jeremy Osborn, Andrew Miller, and Mike Bifulco (left to right) in 2016. Photo courtesy of Andrew Miller.</small>
+          <small>Paris portrait of Jeremy Osborn, Andrew Miller, and Mike Bifulco (left to right) in 2016. Photo courtesy of Andrew Miller</small>
         </figcaption>
       </figure>
     </div>
@@ -307,8 +306,8 @@ banner: false
     <h2>Gymnasium Wins Elevate Award</h2>
     <p>Aquent Gymnasium wins the American Staffing Association’s first-ever <a href="https://www.prnewswire.com/news-releases/american-staffing-association-honors-most-outstanding-work-based-learning-programs-in-staffing-and-recruiting-industry-300714691.html" target="_blank" rel="noopener">Elevate Award</a> in October 2018, honoring the most outstanding work-based learning programs in the staffing and recruiting industry.</p>
     <div class="images">
-      <figure>
-        <img alt="" src="{{ img_path }}awards/gym-elevate-award-miller-janey-2018-720w.jpg" width="720" height="1080" decoding="async">
+      <figure class="portrait">
+        <img alt="" src="{{ img_path }}awards/gym-elevate-award-miller-janey-2018-1280w.jpg" width="1280" height="1920" decoding="async">
         <figcaption>
         <small>Gymnasium’s Andrew Miller and Keir Kaney accepting the Elevate Award.</small>
         </figcaption>
@@ -316,9 +315,23 @@ banner: false
       <figure>
         <img alt="" src="{{ img_path }}awards/gym-asa-elevate-award-2018-1920w.jpg" width="1920" height="1080" decoding="async">
       <figcaption>
-      <small>American Staffing Association’s Elevate Award ceremony in 2018. Photo courtesy of Andrew Miller.</small>
+      <small>American Staffing Association’s Elevate Award ceremony in 2018. Photo courtesy of Andrew Miller</small>
       </figcaption>
     </figure>
+    </div>
+  </article>
+
+  <article>
+    <p class="date"><b>2019</b></p>
+    <h2>Work Hard, Play Hard</h2>
+    <p><a href="https://artifactconf.com" target="_blank" rel="noopener">ARTIFACT</a> conference 2019 speakers shoot some hoop in true Gymnasium style.</p>
+    <div class="images">
+      <figure>
+        <img alt="" src="{{ img_path }}peeps/aea-gym-hoop-dreams-2019-1920w.jpg" width="1920" height="1080" decoding="async">
+        <figcaption>
+        <small><a href="https://danmall.com" target="_blank" rel="noopener">Dan Mall</a>, ball in hand, center, with <a href="https://bradfrost.com" target="_blank" rel="noopener">Brad Frost</a> zoning Jeremy Osborn, to the right. And Mike Bifulco, far left.</small>
+        </figcaption>
+      </figure>
     </div>
   </article>
 
@@ -382,6 +395,26 @@ banner: false
     <p class="date"><b>2023</b></p>
     <h2>10 Years of Free Online Learning</h2>
     <p>Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, articles, and webinars on design, development, UX, accessibility, and career skills from industry experts to anyone, anywhere in the world.</p>
+    <div class="images">
+      <figure>
+        <img alt="" src="{{ img_path }}peeps/bos-hq-gym-team-og-1920w.jpg" width="1920" height="1440" decoding="async">
+        <figcaption>
+        <small>The Gymnasium team at Boston HQ, 501 Boylston, in 2019; left to right: Andrew Miller, Program Director; Keir Janey, Marketing Lead; Justin Gagne, Design Lead; Mike Bifulco, Director of Technology; and Jeremy Osborn, Director of Learning.</small>
+        </figcaption>
+      </figure>
+      <figure class="portrait">
+        <img alt="" src="{{ img_path }}peeps/bos-hq-edirisinghe-1280w.jpg" width="1280" height="1920" decoding="async">
+        <figcaption>
+        <small>Roman Edirisinghe in the Boston HQ cafe in 2019 before joining the Gymnasium team in 2021 as the Director of Technology; photo courtesy of Jeremy Osborn</small>
+        </figcaption>
+      </figure>
+      <figure class="portrait">
+        <img alt="" src="{{ img_path }}peeps/bos-ica-gym-team-2022-1280w.jpg" width="1280" height="1920" decoding="async">
+        <figcaption>
+        <small>The Gymnasium team in 2022 reflects outside the Institute of Contemporary Art (ICA) in Boston, MA. Left to right: Keir, Roman, Andrew, Justin, and Jeremy. Photo courtesy of Roman Edirisinghe</small>
+        </figcaption>
+      </figure>
+    </div>
   </article>
 
   <article>
@@ -390,7 +423,7 @@ banner: false
     <p>We’ve been trailblazers in the web community since launching in 2013 — shoutout to iPhone 5s and Vine.</p>
     <p>To celebrate, we just dropped these 5-minute tutorials on design basics taught by Meagan Fisher.</p>
     <p>Celebrate with us and <a href="https://www.youtube.com/playlist?list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">design like a pro</a>!</p>
-    <div class="images">
+    <div class="images col-3">
       <figure>
         <div class="iframe-video-holder">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/oaAJzDFXHvc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
