Update anniversary page
- Update descriptions
- Update captions
- Remove photo credits

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -227,13 +227,13 @@ banner: false
       <figure>
         <img alt="" src="{{ img_path }}promos/fr-sit-and-get-fit-postcard-2016-1280w.jpg" width="1280" height="1280" decoding="async">
         <figcaption>
-          <small>Our Sit and Get Fit campaign postcard <span class="no-wrap">(édition française)</span>. Photo courtesy of Andrew Miller</small>
+          <small>Our Sit and Get Fit campaign postcard <span class="no-wrap">(édition française)</span>.</small>
         </figcaption>
       </figure>
       <figure>
         <img alt="" src="{{ img_path }}peeps/fr-obsorn-miller-bifulco-1280w.jpg" width="1280" height="1280" decoding="async">
         <figcaption>
-          <small>Paris portrait of Jeremy Osborn, Andrew Miller, and Mike Bifulco (left to right) in 2016. Photo courtesy of Andrew Miller</small>
+          <small>Paris portrait of Jeremy Osborn, Andrew Miller, and Mike Bifulco (left to right) in 2016.</small>
         </figcaption>
       </figure>
     </div>
@@ -309,13 +309,13 @@ banner: false
       <figure class="portrait">
         <img alt="" src="{{ img_path }}awards/gym-elevate-award-miller-janey-2018-1280w.jpg" width="1280" height="1920" decoding="async">
         <figcaption>
-        <small>Gymnasium’s Andrew Miller and Keir Kaney accepting the Elevate Award.</small>
+        <small>Andrew Miller and Keir Kaney accepting the Elevate Award.</small>
         </figcaption>
       </figure>
       <figure>
         <img alt="" src="{{ img_path }}awards/gym-asa-elevate-award-2018-1920w.jpg" width="1920" height="1080" decoding="async">
       <figcaption>
-      <small>American Staffing Association’s Elevate Award ceremony in 2018. Photo courtesy of Andrew Miller</small>
+      <small>American Staffing Association’s Elevate Award ceremony in 2018.</small>
       </figcaption>
     </figure>
     </div>
@@ -329,7 +329,7 @@ banner: false
       <figure>
         <img alt="" src="{{ img_path }}peeps/aea-gym-hoop-dreams-2019-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
-        <small><a href="https://danmall.com" target="_blank" rel="noopener">Dan Mall</a>, ball in hand, center, with <a href="https://bradfrost.com" target="_blank" rel="noopener">Brad Frost</a> zoning Jeremy Osborn, to the right. And Mike Bifulco, far left.</small>
+        <small><a href="https://danmall.com" target="_blank" rel="noopener">Dan Mall</a>, ball in hand, center, with <a href="https://bradfrost.com" target="_blank" rel="noopener">Brad Frost</a> zoning Jeremy Osborn, to the right; Mike Bifulco, far left, in all black</small>
         </figcaption>
       </figure>
     </div>
@@ -394,7 +394,7 @@ banner: false
   <article>
     <p class="date"><b>2023</b></p>
     <h2>10 Years of Free Online Learning</h2>
-    <p>Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, articles, and webinars on design, development, UX, accessibility, and career skills from industry experts to anyone, anywhere in the world.</p>
+    <p>Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, and content available to anyone, anywhere in the world. Take a behind-the-scenes look at the team.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}peeps/bos-hq-gym-team-og-1920w.jpg" width="1920" height="1440" decoding="async">
@@ -405,13 +405,13 @@ banner: false
       <figure class="portrait">
         <img alt="" src="{{ img_path }}peeps/bos-hq-edirisinghe-1280w.jpg" width="1280" height="1920" decoding="async">
         <figcaption>
-        <small>Roman Edirisinghe in the Boston HQ cafe in 2019 before joining the Gymnasium team in 2021 as the Director of Technology; photo courtesy of Jeremy Osborn</small>
+        <small>Roman Edirisinghe in the Boston HQ cafe in 2019 before joining the Gymnasium team in 2021 as the Director of Technology</small>
         </figcaption>
       </figure>
       <figure class="portrait">
         <img alt="" src="{{ img_path }}peeps/bos-ica-gym-team-2022-1280w.jpg" width="1280" height="1920" decoding="async">
         <figcaption>
-        <small>The Gymnasium team in 2022 reflects outside the Institute of Contemporary Art (ICA) in Boston, MA. Left to right: Keir, Roman, Andrew, Justin, and Jeremy. Photo courtesy of Roman Edirisinghe</small>
+        <small>The Gymnasium team in 2022 reflects outside the Institute of Contemporary Art (ICA) in Boston, MA. Left to right: Keir, Roman, Andrew, Justin, and Jeremy.</small>
         </figcaption>
       </figure>
     </div>
@@ -420,9 +420,7 @@ banner: false
   <article>
     <p class="date"><b>2023</b></p>
     <h2>Back to Design Basics</h2>
-    <p>We’ve been trailblazers in the web community since launching in 2013 — shoutout to iPhone 5s and Vine.</p>
-    <p>To celebrate, we just dropped these 5-minute tutorials on design basics taught by Meagan Fisher.</p>
-    <p>Celebrate with us and <a href="https://www.youtube.com/playlist?list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">design like a pro</a>!</p>
+    <p>We’ve been trailblazers in the web community since launching in 2013. To celebrate, we just dropped these 5-minute tutorials on design basics. <a href="https://www.youtube.com/playlist?list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2" target="_blank" rel="noopener">Design like a pro</a>!</p>
     <div class="images col-3">
       <figure>
         <div class="iframe-video-holder">
