Update collections order
- Update data file naming convention for manual order
- Add data order/value pair to match filename
- Remove landing page reversed sort order

--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -20,7 +20,7 @@ css: [/css/collections.css]
     <div class="cols">
       <ul>
       {%- assign collections_sorted = site.data.collections | sort -%}
-      {%- for collection_hash in collections_sorted reversed -%}
+      {%- for collection_hash in collections_sorted -%}
         {%- assign hub_page = collection_hash[1] -%}
         {%- unless hub_page.exclude -%}
         <li class="collection">
