--- a/courses/index.html
+++ b/courses/index.html
@@ -18,10 +18,10 @@ permalink: /courses/
 
   <header class="about">
     <div class="container">
-      <h1>{{ main.main.title }}</h1>
+      <h1>{{ main.header.title }}</h1>
       <p>
-        <strong class="block">{{ main.main.tagline }}</strong>
-        {{ main.main.short_description }}
+        <strong class="block">{{ main.header.tagline }}</strong>
+        {{ main.header.short_description }}
       </p>
     </div>
   </header>
