--- a/courses/index.html
+++ b/courses/index.html
@@ -18,6 +18,9 @@ permalink: /courses/
 
   <header class="about">
     <div class="container">
+      {%- unless main.header.banner_email_campaign != "true" -%}
+        {%- include partials/courses-banner-email-campaign.html -%}
+      {%- endunless -%}
       <h1>{{ main.header.title }}</h1>
       <p>
         <strong class="block">{{ main.header.tagline }}</strong>
