Update CCPA and GDPR policies
- Update link to data category table
- Add fragment for data category table
- Update formatting

--- a/static-pages/privacy-policy/european-rights/index.html
+++ b/static-pages/privacy-policy/european-rights/index.html
@@ -114,8 +114,8 @@ css: [/css/privacy-policy.css]
 
 <section id="identity-verification">
   <h2>Identity Verification</h2>
-  <p>We may need to request additional information to verify your identity before we can fulfill your request. Please be aware that the processing of your personal data is necessary for performance of our services.  If you request erasure, restriction on processing, or withdraw consent, we may be unable to continue providing the services.</p>
-  <table>
+  <p>We may need to request additional information to verify your identity before we can fulfill your request. Please be aware that the processing of your personal data is necessary for performance of our services. If you request erasure, restriction on processing, or withdraw consent, we may be unable to continue providing the services.</p>
+  <table id="data-category">
     <thead>
       <tr>
         <th>Data Category</th>
