Update privacy policy
- Remove Privacy Shield Participation section
- Update Privacy Shield Participation link

--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -133,7 +133,7 @@ css: [/css/privacy-policy.css]
 
 <section id="eu-us-dpf">
   <h2>EU-U.S. Data Privacy Framework (EU-U.S. DPF), the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. Data Privacy Framework (Swiss-U.S. DPF) Participation</h2>
-  <p>Aquent complies with theEU-U.S. DPF, the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. DPF as set forth by the US Department of Commerce regarding the collection, use and retention of personal information from Switzerland, the United Kingdom, and European Union member countries. For more information, please <a href="https://aquent.com/privacy-policy/privacy-shield-notice" target="_blank" rel="noopener">view our Data Privacy Framework Notice.</a></p>
+  <p>Aquent complies with theEU-U.S. DPF, the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. DPF as set forth by the US Department of Commerce regarding the collection, use and retention of personal information from Switzerland, the United Kingdom, and European Union member countries. For more information, please <a href="https://thegymnasium.com/privacy-policy/privacy-shield-notice">view our Data Privacy Framework Notice.</a></p>
   <p>To learn more about the Data Privacy Framework (DPF) program, and to view our certification, please visit <a href="https://www.dataprivacyframework.gov" target="_blank" rel="noopener">https://www.dataprivacyframework.gov</a>.</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
@@ -144,18 +144,6 @@ css: [/css/privacy-policy.css]
   <h2>Data Retention and Integrity</h2>
   <p>We will retain your personal data for as long as is necessary in connection with our relationship with you, to provide you with the services requested, or for other necessary purposes such as compliance with a law, regulation or other legal authority, or as is otherwise permitted to be maintained for other legal purposes, such as audit, security, fraud prevention, or preserving and defending Aquent’s legal rights.</p>
   <p>We encourage you to promptly update personal data previously provided to us if it changes so that Aquent can maintain accurate data about you. You may contact Aquent to update the content and accuracy of your information. Registered users of the Aquent website have access to their individual information and may update or correct it at any time. Although you may change your data, Aquent may retain in backup or inactive files containing the uncorrected or outdated data. Such data may be retained for several reasons, including backups for disaster recovery planning, dispute resolution purposes, troubleshooting, and enforcement of agreements. Therefore, you should not expect that all your historical data will be removed from our databases at the time you notify us of changes. Aquent reserves the right to correct personal data to make it current and consistent with data directly provided by you — for example, when you update your address on your resume but not elsewhere.</p>
-  <div class="to-top-link">
-    <a href="#main"><b>Back to top</b></a>
-  </div>
-</section>
-
-<section id="privacy-shield-participation">
-  <h2>Privacy Shield Participation</h2>
-  <p>Aquent complies with Privacy Shield Frameworks as set forth by the US Department of Commerce regarding the collection, use and retention of personal information from Switzerland, the United Kingdom, and European Union member countries.</p>
-  <ul>
-    <li>For more information, please view our <a href="https://aquent.com/privacy-policy/privacy-shield-notice">Privacy Shield Notice</a>.</li>
-    <li>To learn more about Privacy Shield and to view Aquent’s certification please visit <a href="https://www.privacyshield.gov/list">https://www.privacyshield.gov/list</a>.</li>
-  </ul>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
