Update privacy policies
- Update punctuation
- Update formatting

--- a/static-pages/privacy-policy/privacy-shield-notice/index.html
+++ b/static-pages/privacy-policy/privacy-shield-notice/index.html
@@ -94,7 +94,7 @@ css: [/css/privacy-policy.css]
 
 <section id="amendment">
   <h2>Amendment</h2>
-  <p>This Data Privacy Framework Notice may be amended consistent with the requirements of the EU-U.S. Data Privacy Framework (EU-U.S. DPF), the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. Data Privacy Framework (Swiss-U.S. DPF)..</p>
+  <p>This Data Privacy Framework Notice may be amended consistent with the requirements of the EU-U.S. Data Privacy Framework (EU-U.S. DPF), the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. Data Privacy Framework (Swiss-U.S. DPF).</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
