Update privacy policy pages
- Remove stray end a tag
- Update fragment formatting

--- a/static-pages/privacy-policy/european-rights/index.html
+++ b/static-pages/privacy-policy/european-rights/index.html
@@ -18,7 +18,7 @@ css: [/css/privacy-policy.css]
     <li><a href="#restriction-on-processing">Restriction on Processing</a></li>
     <li><a href="#portability">Portability</a></li>
     <li><a href="#to-object-to-processing">To Object to Processing</a></li>
-    <li><a href="#to-object-to-automated decision-making">To Object to Automated Decision Making</a></li>
+    <li><a href="#to-object-to-automated-decision-making">To Object to Automated Decision Making</a></li>
     <li><a href="#right-to-lodge-a-complaint">Right to Lodge a Complaint</a></li>
     <li><a href="#right-to-withdraw-consent">Right to Withdraw Consent</a></li>
     <li><a href="#how-to-exercise-your-rights">How to Exercise Your Rights</a></li>
@@ -76,7 +76,7 @@ css: [/css/privacy-policy.css]
   </div>
 </section>
 
-<section id="to-object-to-automated decision-making">
+<section id="to-object-to-automated-decision-making">
   <h2>To Object to Automated Decision Making</h2>
   <p>You have the right to object to a decision based solely on automated processing, including profiling which produces legal effects concerning you or has similarly significant effects on you.</p>
   <div class="to-top-link">
