--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -113,7 +113,7 @@ css: [/css/privacy-policy.css]
     <li><b>Legal Investigations and requests:</b> Aquent may disclose personal data in response to lawful requests by law enforcement agencies or other governmental agencies, including to meet national security or law enforcement requirements, or when Aquent in good faith believes it is necessary in order to comply with legal obligations.</li>
     <li><b>Protection of Aquent and others:</b> Aquent may release data when we believe release is appropriate to enforce or apply our policies and agreements, or protect the rights, property or safety of Aquent, our employees, or others. This does not include selling, renting, sharing or otherwise disclosing personal data for commercial purposes in violation of the commitments in this Privacy Notice.</li>
   </ul>
-  <p><strong>Choice and additional Rights.</strong> You may have additional rights with respect to your personal data. More information about the availability of additional rights and choices can be found at the links below.</p>
+  <p><b>Choice and additional Rights:</b> You may have additional rights with respect to your personal data. More information about the availability of additional rights and choices can be found at the links below.</p>
   <ul>
     <li><a href="https://thegymnasium.com/privacy-policy/european-rights">European Privacy Rights (GDPR)</a></li>
     <li><a href="https://thegymnasium.com/privacy-policy/california-privacy-rights">California Privacy Rights</a></li>
