Update privacy policy link
- Remove trailing slash

--- a/static-pages/privacy-policy/privacy-shield-notice/index.html
+++ b/static-pages/privacy-policy/privacy-shield-notice/index.html
@@ -33,7 +33,7 @@ css: [/css/privacy-policy.css]
   <h2>Data Processed</h2>
   <p>We obtain and process Personal Information from the European Union, United Kingdom, and Switzerland primarily as a data controller. As a data controller we collect and process personal data directly from individuals in the manner described in our Privacy Notice. We process this personal data as needed to run our business, to assist applicants to find assignments or direct hire positions with our clients, to provide services to our clients, and to pay our service providers.</p>
   <p>On some occasions Aquent may operate as a data processor, processing data on behalf of and on the instructions of our customers in connection with our services. In these situations, our clients decide what personal data they submit to us, and we process the personal data at our customer’s instructions and pursuant to a contractual agreement. We may access and use this data in response to customer instruction and to fulfill our contract with such clients.</p>
-  <p>For more information on how we use and share personal data please see our <a href="https://thegymnasium.com/privacy-policy/">Privacy Notice</a> and <a href="https://thegymnasium.com/privacy-policy/european-rights">European Rights Notice</a>.</p>
+  <p>For more information on how we use and share personal data please see our <a href="https://thegymnasium.com/privacy-policy">Privacy Notice</a> and <a href="https://thegymnasium.com/privacy-policy/european-rights">European Rights Notice</a>.</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
